# presentpy-jupyter

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  Makefile  README.md  RELEASE.md  dev-requirements.txt  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  release.yml
jupyter-config/server-config/: presentpy_jupyter.json
presentpy_jupyter/: __init__.py  handlers.py
schema/: plugin.json
src/: handler.ts  index.ts
